--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,14 @@
               android:layout_height="match_parent"
               tools:context=".ui.top.MainFragment"
               android:orientation="vertical">
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-              android:text="HHHHHH"/>
+    <com.android.tmdb.movie.degea9.ui.CircleProgressView
+            android:id="@+id/percentView"
+            android:layout_gravity="center"
+            android:layout_width="200dp"
+            android:layout_height="200dp">
+
+    </com.android.tmdb.movie.degea9.ui.CircleProgressView>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp_trending"
