--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".ui.top.MainFragment"
-              android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+
+        <variable
+                name="topViewModel"
+                type="com.android.tmdb.movie.degea9.ui.top.TopViewModel"/>
+    </data>
+    <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  tools:context=".ui.top.MainFragment"
+                  android:orientation="vertical">
 
 
-    <androidx.viewpager.widget.ViewPager
-            android:id="@+id/vp_trending"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_trending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </androidx.viewpager.widget.ViewPager>
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_on_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        </androidx.viewpager2.widget.ViewPager2>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_on_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:items="@{topViewModel.broadcastingShows}">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_in_theaters"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_in_theaters"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
