--- a/app/src/main/res/layout/airing_tv_show.xml
+++ b/app/src/main/res/layout/airing_tv_show.xml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
-            tools:layout_editor_absoluteX="141dp" android:id="@+id/poster" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            android:text="Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/poster"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
-    <TextView
-            android:text="Date"
-            android:layout_width="wrap_content"
-            android:layout_height="19dp"
-            tools:layout_editor_absoluteX="0dp"
-            android:id="@+id/date" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/name"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+
+        <variable
+                name="show"
+                type="com.android.tmdb.movie.degea9.data.database.entity.TVShow"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
+                tools:layout_editor_absoluteX="141dp" android:id="@+id/poster" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:imageUrl="@{show.backdropPath}"/>
+        <TextView
+                android:text="@{show.name}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/title"
+                app:layout_constraintBottom_toBottomOf="@+id/poster"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"/>
+        <TextView
+                android:text="@{show.firstAirDate}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:layout_editor_absoluteX="0dp"
+                android:id="@+id/date" android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/poster"
+                android:textColor="@android:color/white"
+                android:layout_marginStart="8dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
