--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,20 +2,33 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
-
+<androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
                   android:layout_width="match_parent"
-                  android:layout_height="match_parent"
+                  android:layout_height="wrap_content"
                   tools:context=".ui.top.MainFragment"
                   android:orientation="vertical">
 
 
-        <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/vp_trending"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <!--<androidx.viewpager2.widget.ViewPager2-->
+                <!--android:id="@+id/vp_trending"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content">-->
 
-        </androidx.viewpager2.widget.ViewPager2>
+        <!--</androidx.viewpager2.widget.ViewPager2>-->
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:text="@string/on_tv"/>
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_on_tv"
                 android:layout_width="match_parent"
@@ -23,6 +36,16 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:text="@string/in_theaters"/>
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_in_theaters"
                 android:layout_width="match_parent"
@@ -31,4 +54,5 @@
         </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
+</androidx.core.widget.NestedScrollView>
 </layout>
