tv show detail screen

--- a/app/src/main/res/layout/movie_on_theater_item.xml
+++ b/app/src/main/res/layout/movie_on_theater_item.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/poster"
                 app:layout_constraintTop_toTopOf="parent"
                 android:adjustViewBounds="true"
-                app:imageUrl="@{movie.backdropPath}"
+                app:backdropPath="@{movie.backdropPath}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
