--- a/app/src/main/res/layout/activity_show_detail.xml
+++ b/app/src/main/res/layout/activity_show_detail.xml
@@ -5,95 +5,138 @@
     <data>
         <variable name="show" type="com.android.tmdb.movie.degea9.data.database.entity.TvShowDetail"></variable>
     </data>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-         android:id="@+id/htab_maincontent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-
-    <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/htab_appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:fitsSystemWindows="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/htab_collapse_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="386dp"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-                app:titleEnabled="false">
-
-            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-                                                               android:layout_height="match_parent"
-                                                               app:layout_collapseMode="parallax">
-
-                <ImageView
-                        android:id="@+id/htab_header"
-                        android:layout_width="match_parent"
-                        android:layout_height="220dp"
-                        android:src="@drawable/movide_placeholder"
-                        android:scaleType="centerCrop"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:imageUrl="@{show.backdropPath}"/>
-                <Space
-                        android:id="@+id/margin_space"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_marginBottom="22dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="@+id/htab_header"
-                        />
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/image_placeholder"
-                        android:id="@+id/imageView2"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/margin_space"/>
-                
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:alpha="0.3"
-                    android:background="@android:color/black"
-                    android:fitsSystemWindows="true"/>
-
-            <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/htab_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_gravity="top"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-        <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_anchorGravity="bottom"
-                app:tabIndicatorColor="@android:color/white"
-                app:tabSelectedTextColor="@android:color/white"
-                app:tabTextColor="@android:color/white"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewpager"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/htab_maincontent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            android:fitsSystemWindows="true">
+
+        <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/htab_appbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:fitsSystemWindows="true"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/htab_collapse_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="450dp"
+                    android:fitsSystemWindows="true"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+
+                    app:titleEnabled="false">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_collapseMode="parallax">
+
+                    <ImageView
+                            android:id="@+id/backdrop"
+                            android:layout_width="match_parent"
+                            android:layout_height="220dp"
+                            android:src="@drawable/movide_placeholder"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:backdropPath="@{show.backdropPath}"/>
+
+                    <View
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="#000000"
+                            android:alpha="0.6"
+                            app:layout_constraintTop_toBottomOf="@+id/backdrop"
+                    >
+
+                    </View>
+                    <Space
+                            android:id="@+id/margin_space"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginBottom="24dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="@+id/backdrop"
+                    />
+                    <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/poster_placeholder"
+                            app:posterPath="@{show.posterPath}"
+                            android:id="@+id/poster"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/margin_space"
+                    android:layout_marginStart="16dp"/>
+                    <TextView
+                            android:text="@{show.name}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/name"
+                            app:layout_constraintStart_toEndOf="@+id/poster"
+                            android:layout_marginStart="8dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:textSize="24sp"
+                            android:textColor="@android:color/white"
+                            android:textStyle="bold"
+                            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                            app:layout_constraintTop_toBottomOf="@+id/backdrop" android:layout_marginBottom="8dp"
+                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.1"
+                            app:layout_constraintVertical_bias="0.114"
+                            />
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+                    <com.android.tmdb.movie.degea9.ui.PercentView
+                            android:id="@+id/percent"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:visibility="invisible"
+                            app:percent="@{show.voteAverage}"
+                            app:layout_constraintStart_toStartOf="@+id/poster"
+                            app:layout_constraintEnd_toEndOf="@+id/poster"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintTop_toBottomOf="@+id/poster"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <!--<View-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:alpha="0.3"-->
+                        <!--android:background="@android:color/black"-->
+                        <!--android:fitsSystemWindows="true"/>-->
+
+                <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/htab_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_gravity="top"
+                        app:layout_collapseMode="pin"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tab_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_anchorGravity="bottom"
+                    app:tabIndicatorColor="@android:color/white"
+                    app:tabSelectedTextColor="@android:color/white"
+                    app:tabTextColor="@android:color/white"/>
+        </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/viewpager"
+                    android:layout_width="match_parent"
+                    android:background="@android:color/darker_gray"
+                    android:layout_height="wrap_content"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
