--- a/app/src/main/res/layout/airing_tv_show.xml
+++ b/app/src/main/res/layout/airing_tv_show.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/poster"
                 app:layout_constraintTop_toTopOf="parent"
                 android:adjustViewBounds="true"
-                app:imageUrl="@{show.backdropPath}"
+                app:backdropPath="@{show.backdropPath}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
