--- a/app/src/main/res/layout/trending_item.xml
+++ b/app/src/main/res/layout/trending_item.xml
@@ -17,7 +17,7 @@
                 tools:srcCompat="@tools:sample/avatars"
                 android:id="@+id/backdrop"
                 android:adjustViewBounds="true"
-                app:imageUrl="@{movie.backdropPath}"/>
+                app:backdropPath="@{movie.backdropPath}"/>
 
 
 
