--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,18 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!-- style for facts in tv show,movie detail-->
+    <style name="facts_title">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+
+    <style name="facts_content">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+
 </resources>
