--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,6 +3,6 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
             app:startDestination="@id/mainFragment">
-    <fragment android:id="@+id/mainFragment" android:name="com.android.tmdb.movie.degea9.ui.top.MainFragment"
+    <fragment android:id="@+id/mainFragment" android:name="com.android.tmdb.movie.degea9.ui.main.movie.MainFragment"
               android:label="fragment_main" tools:layout="@layout/fragment_main"/>
 </navigation>
