--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -5,26 +5,39 @@
     <data>
         <variable name="video" type="com.android.tmdb.movie.degea9.data.database.entity.Video"></variable>
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-
-
-    <ImageView
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/video_thumbnail" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-    />
-    <TextView
-            android:text="@{video.name}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/video_thumbnail" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content">
+
+        <FrameLayout
+                android:id="@+id/fl_video"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
+            <ImageView
+                    app:youtubeThumbnail="@{video.key}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
+                    app:layout_constraintStart_toStartOf="parent"
+
+            />
+            <ImageView
+                    android:id="@+id/video_thumbnail"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_play_circle_outline_white_48dp"/>
+        </FrameLayout>
+        <TextView
+                android:text="@{video.name}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/name" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/fl_video" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
