--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="fact_title">#fafafa</color>
+    <color name="fact_content">#b0bec5</color>
+    <color name="movie_info_background">#24303f</color>
 </resources>
